--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -29,8 +29,9 @@ body {
  * Header
  */
 .outer-wrap-header {
+    /* display: none; */
     max-width: 100%;
-    min-height: 2em;
+    /* min-height: 2em; */
     background-color: #000;
     color: #fff;
 }
@@ -44,9 +45,10 @@ body {
 }
 
 .header-logo {
+    width: 100px;
     position: absolute;
-    top: 7em;
-    left: 1em;
+    top: 6em;
+    left: 2em;
 }
 
 
@@ -66,6 +68,10 @@ body {
     color: #fff;
 }
 
+/* .outer-wrap-navbar a:not(:last-child):after {
+    content: " | ";
+} */
+
 .outer-wrap-navbar a:hover {
     color: #ddd;
 }
@@ -76,7 +82,7 @@ body {
 }
 
 .navbar > a {
-    margin: 0 4px;
+    margin: 0 5px;
 }
 
 
@@ -113,8 +119,15 @@ h1 {
     color: #fff;
     padding: 1em 0;
 }
+.wrap-footer {
+    display: flex;
+    justify-content: space-between;
+}
 
-
+.wrap-footer a {
+    /* font-size: 140%; */
+    color: rgb(103, 185, 15);
+}
 
 /**
  * Responsive
